[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Project/UI/LogEntry.gd" type="Script" id=1]
[ext_resource path="res://src/Project/UI/MoveBox.gd" type="Script" id=2]
[ext_resource path="res://src/Assets/Enemies/test.png" type="Texture" id=3]
[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 4 )

[node name="LogEntry" type="Node2D"]
script = ExtResource( 1 )

[node name="Border" type="ColorRect" parent="."]
margin_right = 240.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 238.0
margin_bottom = 78.0
color = Color( 0.494118, 0.054902, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveBox" type="Node2D" parent="."]
position = Vector2( 120, 30 )
script = ExtResource( 2 )
canMove = false

[node name="Sprite" type="Sprite" parent="MoveBox"]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="MoveBox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="MoveBox"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="MoveBox"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="MoveBox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Node2D" parent="MoveBox"]
visible = false
position = Vector2( 0, 185 )
z_index = 5

[node name="Background" type="ColorRect" parent="MoveBox/Tooltip"]
margin_left = -120.0
margin_top = -160.0
margin_right = 120.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="ColorRect" parent="MoveBox/Tooltip"]
margin_left = -117.0
margin_top = -157.0
margin_right = 117.0
margin_bottom = -28.0
color = Color( 0.458824, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MoveBox/Tooltip"]
margin_left = -112.0
margin_top = -157.0
margin_right = 113.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 2 )
text = "aaaaaaaaaaaaaa"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserText" type="Label" parent="."]
margin_left = 15.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "User"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetText" type="Label" parent="."]
margin_left = 163.0
margin_top = 20.0
margin_right = 229.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Target"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 240.0
margin_bottom = 79.0
border_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="ReferenceRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ReferenceRect" to="." method="_on_mouse_exited"]
